--- a/styles/styles.css
+++ b/styles/styles.css
@@ -63,4 +63,24 @@ body a, body:focus {
   font-size: 30px;
   color: #606c38;
   margin: 0;
+}
+
+.characters {
+  padding: 70px 30px 30px;
+}
+.characters-title {
+  font-size: 60px;
+  color: #283618;
+}
+.characters-container {
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+  align-items: center;
+  gap: 70px 100px;
+  flex-wrap: wrap;
+  margin: 50px 0px;
+}
+.characters-container .card {
+  width: 300px;
 }/*# sourceMappingURL=styles.css.map */
