--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -20,6 +20,8 @@ body {
   }
 }
 
+// HEADER AND FOOTER
+
 .header,
 .footer {
   @include flex(row, center, center, 0);
@@ -30,6 +32,8 @@ body {
     color: #606c38;
   }
 }
+
+// FIRST PAGE
 
 .first-page {
   @include flex(column, center, center, 50px);
@@ -66,6 +70,27 @@ body {
       font-size: 30px;
       color: #606c38;
       margin: 0;
+    }
+  }
+}
+
+// CHARACTERS PAGE
+
+.characters {
+  padding: 70px 30px 30px;
+
+  &-title {
+    font-size: 60px;
+    color: #283618;
+  }
+
+  &-container {
+    @include flex(row, center, center, 70px 100px);
+    flex-wrap: wrap;
+    margin: 50px 0px;
+
+    .card {
+      width: 300px;
     }
   }
 }
